Templates/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
  labels:
    component: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web-app
  template:
    metadata:
      labels:
        component: web-app
    spec:
      containers:
      - name: nginx
        image: ricardoher96/web-app
        ports:
        - containerPort: 80
