Templates/app-server-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: app-server-service
spec:
  selector:
    component: app-server
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
