Templates/nginx-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ngninx-service
spec:
  selector:
    component: web-app
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
