Templates/redis-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis-service
spec:
  selector:
    component: redis
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
