Templates/ingress.yaml
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: ingress-service
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec: 
  rules: 
    - http: 
        paths: 
          - path: /?(.*)
            backend: 
              serviceName: ngninx-service
              servicePort: 80
          - path: /app/?(.*)
            backend: 
              serviceName: app-server-service
              servicePort: 5000
